# connect_four

./: CMakeLists.txt  README.md  connect_four  connect_four.c  install.sh  main.c
.cache/clangd/index/: choice_matrix.c.27E48AF6FAF06847.idx  choice_matrix.h.D37599A3EAEB3263.idx  game.c.5043F17A663F44F0.idx  main.c.6569E16C3F3F3A10.idx  playrs.c.45CC68886D320F45.idx  playrs.h.EF0FC2C3C166C974.idx
include/: choice_matrix.h  game.h  playrs.h
src/: choice_matrix.c  game.c  playrs.c
